# panavision

./: .gitignore  README.md  clustering.ipynb  ee.ipynb  leafmap.ipynb  mina_years.ipynb  pyproject.toml  similarity.ipynb  utils.py
.github/workflows/: deploy.yml
assets/geo/: mina.geometry.geojson  pa.geometry.geojson  waters.geojson
docs/: layout_modern.json  paper.typ  poster_modern.typ  sources.bib
website/: CNAME  index.html  map.html  styles.css
